<resources>
    <string name="app_name">LOGO IDE (beta)</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="problem">Problem</string>
    <string name="dialog_zero_project">Nie masz jeszcze żadnego projektu lub został on usunięty!</string>
    <string name="ok">OK</string>
    <string name="continue_last_project">Kontynuuj ostatni projekt</string>
    <string name="projects">Projekty</string>
    <string name="tutorials">Poradniki</string>
    <string name="libraries">Biblioteki</string>
    <string name="settings">Ustawienia</string>
    <string name="app_name_short">LOGO IDE</string>
    <string name="logo_description">logo</string>
    <string name="example_code">przykładowyKod</string>
    <string name="copied_to_clipboard">Kod skopiowany do schowka</string>
    <string name="copy_code">Kopiuj kod</string>
    <string name="tutorial_not_found">Nie znaleziono poradnika</string>
    <string name="appearance">Wygląd</string>
    <string name="theme">Motyw</string>
    <string name="font">Czcionka</string>
    <string name="font_size">Rozmiar czcionki</string>
    <string name="example_text">Przykładowy tekst</string>
    <string name="editor_settings">Ustawienia edytora</string>
    <string name="hints">Podpowiedzi</string>
    <string name="autocorrect">Autokorekta</string>
    <string name="confirm_delete">Potwierdzenie usunięcia</string>
    <string name="confirm_delete_project_desc">Czy na pewno chcesz usunąć projekt \'%1$s\'?</string>
    <string name="delete">Usuń</string>
    <string name="cancel">Anuluj</string>
    <string name="project_exist">Projekt o podanej nazwie już istnieje!</string>
    <string name="project_name">Nazwa projeku</string>
    <string name="enter_name">Podaj nazwę</string>
    <string name="new_project">Nowy projekt</string>
    <string name="complete_procedure_info">Uzupełnij informacje o procedurze</string>
    <string name="procedure_name">Nazwa procedury</string>
    <string name="procedure_description">Opis procedury</string>
    <string name="procedure_author">Autor procedury</string>
    <string name="enter_procedure_code">Podaj kod procedury</string>
    <string name="confirm">Zatwierdź</string>
    <string name="library_name">Nazwa Biblioteki</string>
    <string name="description_label">Opis</string>
    <string name="add_description_label">Dodaj opis</string>
    <string name="author">Autor</string>
    <string name="enter_author">Podaj Autora</string>
    <string name="delete_procedure">Usuń procedure</string>
    <string name="delete_procedure_text">Czy napewno chcesz usunąć wybraną procedure?</string>
    <string name="back">Wstecz</string>
    <string name="empty_library_text">Nie ma jeszcze procedur w tej bibliotece</string>
    <string name="delete_library_text">Czy na pewno chcesz usunąć biblioteke \'%1$s\'?</string>
    <string name="desc_too_long">Opis nie może być dłuższy niż 50 znaków</string>
    <string name="fill_all_fields">Uzupełnij wszystkie pola</string>
    <string name="library_exists">Biblioteka o takiej nazwie już istnieje</string>
    <string name="add_library">Dodaj biblioteke</string>
    <string name="add_procedure_to_">Dodaj procedure do %1$s</string>
    <string name="empty_project">Pusty projekt</string>
    <string name="empty_project_full_text">W projekcie \'%1$s\' nie ma jeszcze żadnego pliku! Wpisz niżej nazwę pierwszego pliku aby go utworzyć.</string>
    <string name="new_file">Nowy plik</string>
    <string name="enter_new_file_name_text">Podaj nazwę pliku, który zostanie dodany do projektu,</string>
    <string name="confirm_delete_file">Potwierdzenie usunięcia</string>
    <string name="confirm_delete_file_full_text">Czy na pewno chcesz usunąć plik \'%1$s\'?</string>
    <string name="continue_step">Dalej</string>
    <string name="copy">Kopiuj</string>
    <string name="errors_in_code">Wykryto %1$d błędy/ów z kodem!</string>
    <string name="turtle">Żółwik</string>
    <string name="turtle_info_angle">Kąt = %1$s°</string>
    <string name="turtle_info_visible">Widoczny = %1$b</string>
    <string name="turtle_info_pen_down">Opuszczony = %1$b</string>
    <string name="turtle_info_size">Rozmiar = %1$s</string>
    <string name="turtle_info_color">Kolor</string>
    <string name="file_saved_info">"Zapisano plik"</string>
    <string name="file_readed_toast">Wczytano plik 👍</string>
    <string name="menu">Menu</string>
    <string name="export_image">Exportuj rysunek</string>
    <string name="saved_jpg">"Zapisano JPG 👌"</string>
    <string name="not_able_to_save_jpg">Nie udało się zapisać JPG 🤷‍♂️</string>
    <string name="as_jpg">Jako JPG</string>
    <string name="save_pdf">Zapisz PDF</string>
    <string name="share">Udostępnij</string>
    <string name="save_program">Zapisz program</string>
    <string name="save_to_file">Zapisz do pliku</string>
    <string name="open_program">Wczytaj program</string>
    <string name="read_from_file">Wczytaj z pliku</string>
    <string name="read_from_disc">Wczytaj z dysku</string>
    <string name="saved_pdf">Zapisano PDF 👌</string>
    <string name="not_able_to_save_pdf">Nie udało się zapisać PDF 😯</string>
    <string name="failed_to_share_image">Failed to share image: %1$s</string>
    <string name="unknown_error">Nieznany błąd</string>
    <string name="library_created">Biblioteka została sworzona\n</string>
    <string name="generic_error">Wystąpił jakis błąd</string>
    <string name="name_empty">Wprowadź nawę projektu</string>
</resources>